# awsmetagpt

./: .env.example  .gitignore  .railwayignore  ARCHITECTURE.md  BEDROCK_SETUP_COMPLETE.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  OPTIMIZATION_REPORT.md  RAILWAY_DEPLOYMENT.md  README.md  README_clean.md  eslint.config.js  index.html  main.py  main_clean.py  nixpacks.toml  package-lock.json  package.json  pyproject.toml  raj1.md  request_claude_access.py  requirements-clean.txt  requirements-metagpt.txt  requirements.txt  setup.py  start-dev.sh  start.sh  tailwind.config.js  test_bedrock_config.py  validate_system.py  vercel.json  verify-deployment.py  verify_implementation.py  vite.config.js
api/: index.py  requirements.txt
app/: __init__.py
app/api/: dependencies.py  middleware.py  routes.py  routes_clean.py
app/core/: config.py  config_clean.py  exceptions.py  logging.py
app/models/: schemas.py
app/services/: __init__.py  agent_orchestrator.py  bedrock_client.py  e2b_service.py  metagpt_service.py  sse_manager.py  websocket_manager.py
app/services/orchestration/: __init__.py  agent_state_manager.py  artifact_processor.py  metagpt_executor.py  models.py  orchestrator.py  task_scheduler.py
app/services/sandbox/: __init__.py  application_runners.py  file_manager.py  models.py  process_manager.py  sandbox_manager.py
metagpt_config/: config2.yaml
scripts/: dev.py  install_metagpt.sh  setup.py
src/: App.jsx  index.css  main.jsx
src/components/: AnimatedBackground.jsx  ArtifactViewer.jsx  E2BSandboxPreview.jsx  ErrorBoundary.jsx  FeatureCard.jsx  Footer.jsx  GlassCard.jsx  Header.jsx  HeroSection.jsx
src/components/sandbox/: LogViewer.jsx  SandboxController.jsx
src/pages/: About.jsx  Generator.jsx  Home.jsx  Results.jsx
src/services/: api.js  sandbox.js  sse.js  websocket.js
src/utils/: e2b-config.js
tests/: test_api.py  test_orchestration.py  test_sandbox.py  verify_metagpt_config.py
