[project]
name = "metagpt-bedrock-backend"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
full = [
    "fastapi>=0.115.0",
    "python-multipart>=0.0.12",
    "uvicorn>=0.30.0",
    "pydantic>=2.6.4",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.0",
    "boto3>=1.35.0",
    "botocore>=1.35.0",
    "PyYAML>=6.0.1",
    "tenacity>=8.2.3",
    "tiktoken>=0.6.0",
    "aiohttp>=3.9.0",
    "aiofiles==23.2.1",
    "openai>=1.6.1",
    "anthropic>=0.18.1",
    "typing-extensions>=4.9.0",
    "e2b>=0.17.0",
]
dev = [
    "pytest>=8.2,<9",
    "pytest-asyncio>=0.24,<1.0",
]
