[project]
name = "metagpt-bedrock-backend"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "python-multipart>=0.0.12",
    "uvicorn>=0.30.0",
    "pydantic>=2.6.4,<2.7",
    "pydantic-settings>=2.0.0,<2.3",
    "python-dotenv>=1.0.0",
    "boto3>=1.35.0",
    "botocore>=1.35.0",
    "PyYAML>=6.0.1",
    "tenacity>=8.2.3",
    "aiohttp>=3.9.0",
    "aiofiles==23.2.1",
    "typing-extensions>=4.9.0,<4.10",
]

[project.optional-dependencies]
full = [
    "tiktoken>=0.6.0",
    "openai>=1.6.1",
    "anthropic>=0.18.1",
    "e2b>=0.17.0",
]
# MetaGPT pins many deps (aiohttp 3.8.x, numpy 1.24.x, etc.); install into the same venv as the API.
# Use Python 3.11.x — PyPI metagpt declares <3.12.
metagpt = [
    "metagpt==0.8.1",
]
dev = [
    "pytest>=8.2,<9",
    "pytest-asyncio>=0.24,<1.0",
]
